# Easi3R

./: .gitignore  README.md  demo.py  pyproject.toml  setup.sh
dust3r/: inference.py  model.py
dust3r/cloud_opt/: base_opt.py
